Fix label spacing issue

--- a/Website/frontend/assets/css/_sass/partials/_enrollment.scss
+++ b/Website/frontend/assets/css/_sass/partials/_enrollment.scss
@@ -767,8 +767,10 @@ $enrollment-module-vertical-padding: 20px;
     }
 
     .checkbox-list {
+        li { 
+            margin-bottom : 4px;
+        }
         label {
-            margin-bottom: 4px;
 			display: inline;
         }
     }
@@ -833,11 +835,11 @@ $enrollment-module-vertical-padding: 20px;
             text-align: right;
         }
         h4 { 
-            margin: 0;
+            margin: 0 0 10px;
         }
         th, td {
             border: none;
-            padding: 8px 0;
+            padding: 0;
             vertical-align: top;
         }
         tr:last-child {
